<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

    <include
        layout="@layout/activity_main" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/report_regarding_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/report_problem_text" />

                <AutoCompleteTextView
                    android:id="@+id/report_regarding"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:completionThreshold="1"
                    android:ems="10"
                    android:hint="@string/report_regarding"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/report_problem_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/report_regarding_layout"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/report_problem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:hint="@string/report_problem"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/report_problem_layout">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:id="@+id/reported_photo"/>
                <Button
                    android:id="@+id/add_report_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image_button_text"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/vulnerability_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_layout"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vulnerability_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/vulnerability_text" />

                <RatingBar
                    android:id="@+id/vulnerability"
                    style="?android:attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vulnerability_layout">

                <Button
                    android:id="@+id/report"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/colorRed"
                    android:gravity="center"
                    android:text="@string/report_button_text"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>